Agrega cambios en rutas de responce agrega definicion de response en swagger
